@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-30T08:25:54Z",
-  "count_outdated" : 2,
-  "uniques_outdated" : 2,
-  "count" : 21,
+  "timestamp" : "2022-04-30T16:29:58Z",
+  "count_outdated" : 19,
+  "uniques_outdated" : 3,
+  "count" : 29,
   "uniques" : 5,
   "views" : [
-    {
-      "timestamp": "2022-04-16T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 2, 17 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-19T00:00:00Z",
       "count": 4,
