@@ -1,12 +1,7 @@
 {
-  "count": 19,
+  "count": 10,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-04-16T00:00:00Z",
-      "count": 9,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-19T00:00:00Z",
       "count": 4,
